fix cors for vercel deployment