@@ -9,7 +9,6 @@ import org.springframework.security.authentication.dao.DaoAuthenticationProvider
 import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
-import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
@@ -17,12 +16,11 @@ import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
-
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
@@ -37,7 +35,7 @@ public class SecurityConfig {
         this.userRepository = userRepository;
     }
 
-    // USER DETAILS SERVICE
+    /* ---------- USER DETAILS SERVICE ---------- */
     @Bean
     public UserDetailsService userDetailsService() {
         return username -> userRepository.findByUsername(username)
@@ -49,40 +47,29 @@ public class SecurityConfig {
                 .orElseThrow(() -> new UsernameNotFoundException("User not found: " + username));
     }
 
-    // SECURITY FILTER CHAIN
+    /* ---------- SECURITY FILTER CHAIN ---------- */
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
-
         http
-            .csrf(AbstractHttpConfigurer::disable)
-
+            .csrf(csrf -> csrf.disable())
             .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-
             .authorizeHttpRequests(auth -> auth
-                .requestMatchers(
-                        "/",
-                        "/error",
-                        "/api/auth/**",
-                        "/h2-console/**"
-                ).permitAll()
-
-                .anyRequest().authenticated()
+                    .requestMatchers(
+                            "/", "/error",
+                            "/api/auth/**",
+                            "/h2-console/**"
+                    ).permitAll()
+                    .anyRequest().authenticated()
             )
-
             .headers(headers -> headers.frameOptions(frame -> frame.disable()))
-
-            .sessionManagement(session ->
-                session.sessionCreationPolicy(SessionCreationPolicy.STATELESS)
-            )
-
+            .sessionManagement(sess -> sess.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
             .authenticationProvider(authenticationProvider())
-
             .addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class);
 
         return http.build();
     }
 
-    // AUTH PROVIDER
+    /* ---------- AUTH PROVIDER ---------- */
     @Bean
     public AuthenticationProvider authenticationProvider() {
         DaoAuthenticationProvider provider = new DaoAuthenticationProvider();
@@ -91,47 +78,42 @@ public class SecurityConfig {
         return provider;
     }
 
-    // AUTH MANAGER
+    /* ---------- AUTH MANAGER ---------- */
     @Bean
-    public AuthenticationManager authenticationManager(
-            AuthenticationConfiguration config) throws Exception {
+    public AuthenticationManager authenticationManager(AuthenticationConfiguration config) throws Exception {
         return config.getAuthenticationManager();
     }
 
-    // PASSWORD ENCODER
+    /* ---------- PASSWORD ENCODER ---------- */
     @Bean
     public PasswordEncoder passwordEncoder() {
         return new BCryptPasswordEncoder();
     }
 
-    // ✅ FIXED CORS FOR LOCAL + VERCEL
+    /* ---------- CORS CONFIGURATION ---------- */
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
 
-        CorsConfiguration configuration = new CorsConfiguration();
+        // ---- 1️⃣ Use origin *patterns* instead of a hard list
+        // This accepts any sub‑domain of *.vercel.app* (including the random hash that Vercel gives you).
+        // It still allows localhost for local dev.
+        CorsConfiguration config = new CorsConfiguration();
+        config.setAllowedOriginPatterns(List.of(
+                "http://localhost:5173",          // Vite dev server
+                "https://*.vercel.app"            // any Vercel deployment of this project
+        ));
 
-        configuration.setAllowedOrigins(
-                Arrays.asList(
-                        "http://localhost:5173",
-                        "https://banking-system-kappa-rose.vercel.app"
-                )
-        );
+        // ---- 2️⃣ HTTP verbs we accept
+        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
 
-        configuration.setAllowedMethods(
-                Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS")
-        );
+        // ---- 3️⃣ Headers we accept (including the JWT Authorization header)
+        config.setAllowedHeaders(List.of("Authorization", "Content-Type"));
 
-        configuration.setAllowedHeaders(
-                Arrays.asList("Authorization", "Content-Type")
-        );
+        // ---- 4️⃣ Important for JWT – the browser must be allowed to send cookies/Authorization header
+        config.setAllowCredentials(true);
 
-        configuration.setAllowCredentials(true);
-
-        UrlBasedCorsConfigurationSource source =
-                new UrlBasedCorsConfigurationSource();
-
-        source.registerCorsConfiguration("/**", configuration);
-
+        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+        source.registerCorsConfiguration("/**", config);
         return source;
     }
 }
